# pposix

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  library.h
.github/workflows/: cmake-linux-release.yml  cmake-macos-11-release.yml  cmake-macos-latest-release.yml  cmake-macos-release.yml  cmake-ubuntu-latest-release.yml
include/pposix/: any_span.hpp  any_view.hpp  buffer_span.hpp  byte_span.hpp  char_span.hpp  close.hpp  confstr.hpp  default_close.hpp  default_close_policy.hpp  descriptor.hpp  directory.hpp  dirent.hpp  dlfcn.hpp  dup.hpp  duration.hpp  enum_flag.hpp  errno.hpp  errno_code.hpp  errno_error.hpp  extension.hpp  fcntl.hpp  fd.hpp  file.hpp  file_descriptor.hpp  ioctl.hpp  is_fd.hpp  make_fd.hpp  mman.hpp  null_fd.hpp  nullfd.hpp  open.hpp  platform.hpp  raw_fd.hpp  rawfd.hpp  resource.hpp  result.hpp  select.hpp  shared_fd.hpp  signal.hpp  socket.hpp  (+10 more)
include/pposix/capi/: null_fd.hpp  nullfd.hpp  raw_fd.hpp  rawfd.hpp  rawfd_t.hpp  socketfd.hpp
include/pposix/capi/dirent/: close_policy.hpp  closedir.hpp  dir_fd.hpp  dirfd.hpp  fdopendir.hpp  opendir.hpp
include/pposix/capi/file/: close.hpp  dup.hpp  flags.hpp  lseek.hpp  offset.hpp  open.hpp  permission.hpp  read.hpp  seek_whence.hpp  whence.hpp  write.hpp
include/pposix/capi/socket/: domain.hpp  flag.hpp  level.hpp  msg_flag.hpp  option.hpp  protocol.hpp  socket.hpp  socket_fd.hpp  socketfd.hpp  sockopt.hpp  type.hpp
include/pposix/dirent/: close_policy.hpp  closedir.hpp  dir_fd.hpp  dirfd.hpp  fdopendir.hpp  opendir.hpp
include/pposix/file/: close.hpp  default_close_policy.hpp  dup.hpp  fd.hpp  flags.hpp  is_fd.hpp  lseek.hpp  mode.hpp  nullfd.hpp  offset.hpp  open.hpp  permission.hpp  rawfd.hpp  read.hpp  seek_whence.hpp  whence.hpp  write.hpp
include/pposix/lnx/: epoll.hpp
include/pposix/realtime/: message_queue.hpp
include/pposix/rt/: mqueue.hpp
include/pposix/socket/: domain.hpp  fd.hpp  flag.hpp  level.hpp  make_socket.hpp  msg_flag.hpp  option.hpp  protocol.hpp  socket.hpp  socket_fd.hpp  sockopt.hpp  type.hpp
include/pposix/util/: underlying_value.hpp
src/: confstr.cpp  default_close_policy.cpp  directory.cpp  dirent.cpp  dlfcn.cpp  dup.cpp  errno.cpp  fcntl.cpp  fd.cpp  file.cpp  file_descriptor.cpp  ioctl.cpp  mman.cpp  select.cpp  signal.cpp  socket.cpp  sysconf.cpp  syslog.cpp  unique_fd.cpp
src/lnx/: CMakeLists.txt  epoll.cpp
src/realtime/: CMakeLists.txt  message_queue.cpp
src/rt/: CMakeLists.txt  mqueue.cpp
test/: CMakeLists.txt  pposix_test.hpp  test_any_view.cpp  test_buffer_span.cpp  test_descriptor.cpp  test_fd.cpp  test_getsockopt.cpp  test_mman.cpp  test_permission.cpp  test_result.cpp  test_select.cpp  test_sysconf.cpp  test_unique_descriptor.cpp  test_unique_fd.cpp
test/capi/: CMakeLists.txt  test_getsockopt.cpp  test_permission.cpp  test_sockopt.cpp
test/lnx/: CMakeLists.txt  test_epoll.cpp
test/posix/: CMakeLists.txt
test/realtime/: CMakeLists.txt  test_message_queue.cpp
test/rt/: CMakeLists.txt  test_mqueue.cpp
tests/: CMakeLists.txt  main.cpp  pposix_test.cpp  pposix_test.hpp  pt.cpp  pt.hpp  test_allocations_before_main.cpp  test_compiles.cpp  test_pposix.cpp
